Fixed width for answers on mobile layout so they take available space

--- a/src/scss/mobile/_card.scss
+++ b/src/scss/mobile/_card.scss
@@ -60,7 +60,7 @@
             font-size: fonts.$mobile-s;
             color: var(--gray-blue);
 
-            max-width: 35ch;
+            max-width: 90%;
         }
     }
 }
